// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`it correctly handles implicit labeled arguments to a generic function 1`] = `
[
  "ast",
  [
    [
      "foo",
      [
        "generics",
        "Option",
      ],
    ],
    [
      "then",
      ":",
      [
        "work",
      ],
    ],
  ],
  [
    [
      "Foo",
      [
        "generics",
        [
          "T",
          ":",
          "Display",
        ],
      ],
    ],
    [
      "else",
      ":",
      "0",
    ],
  ],
  [
    [
      "bar",
      [
        "generics",
        "Option",
      ],
    ],
    [
      "then",
      ":",
      [
        "baz",
      ],
    ],
  ],
]
`;

exports[`it correctly handles the kitchen sink 1`] = `
[
  "ast",
  [
    "use",
    "std",
    "::",
    "macros",
    "::",
    "all",
  ],
  [
    "use",
    "std",
    "::",
    "io",
    "::",
    [
      "object_literal",
      "read",
      [
        "write",
        ":",
        "io_write",
      ],
    ],
  ],
  [
    "fn",
    [
      "fib",
      [
        "n",
        ":",
        "i32",
      ],
    ],
    "->",
    "i32",
    [
      "block",
      [
        "if",
        "n",
        "<=",
        "1",
        "then",
        ":",
        [
          "block",
          "n",
        ],
        [
          "else",
          ":",
          [
            "block",
            [
              [
                "fib",
                [
                  "n",
                  "-",
                  "1",
                ],
              ],
              "+",
              [
                "fib",
                [
                  "n",
                  "-",
                  "2",
                ],
              ],
            ],
          ],
        ],
      ],
    ],
  ],
  [
    "macro_let",
    "extract_parameters",
    "=",
    [
      "definitions",
      "=>",
      [
        "block",
        [
          "\\",
          [
            "\`",
            "parameters",
          ],
          ".",
          "concat",
          "definitions",
          ".",
          [
            "slice",
            "1",
          ],
        ],
      ],
    ],
  ],
  [
    "if",
    "x",
    ">",
    "10",
    "then",
    ":",
    [
      "block",
      "10",
    ],
    [
      "else",
      ":",
      [
        "block",
        "20",
      ],
    ],
  ],
  [
    "if",
    "x",
    "<",
    "0.0",
    "then",
    ":",
    "-1",
    [
      "elif",
      ":",
      "x",
      "<",
      "2.0",
    ],
    [
      "then",
      ":",
      "0",
    ],
    [
      "else",
      ":",
      "2",
    ],
  ],
  [
    "array",
    ".",
    [
      "reduce",
      "0",
      "1",
      "2",
    ],
    "hey",
    ":",
    [],
    "=>",
    [
      "block",
      [
        "log",
        "val",
      ],
      [
        "acc",
        "+",
        "val",
      ],
    ],
    [
      "with",
      ":",
      [],
      "=>",
      "0",
    ],
  ],
  "10",
  [
    "+",
    "3",
  ],
  [
    "mul",
    [
      "&",
      "self",
    ],
    [
      "other",
      ":",
      [
        "Vec",
        [
          "generics",
          "T",
        ],
      ],
    ],
  ],
  [
    "mul",
    [
      "&",
      "self",
    ],
    [
      "other",
      ":",
      [
        "Vec",
        [
          "generics",
          "T",
        ],
      ],
    ],
  ],
  [
    "let",
    "a",
    "=",
    [
      "array",
      ".",
      [
        [
          "reduce",
          "0",
        ],
        [
          "tuple",
          "acc",
          "val",
        ],
        "=>",
        [
          "block",
          [
            "acc",
            "+",
            "val",
          ],
        ],
      ],
      "+",
      "10",
      "*",
      "3",
    ],
  ],
  [
    "let",
    "x",
    "=",
    [
      "my_func",
      [
        "add",
        "1",
        "2",
      ],
      [
        [],
        "=>",
        [
          "block",
          [
            "hello",
          ],
        ],
      ],
      [
        "3",
        "+",
        "4",
      ],
    ],
  ],
  [
    "let",
    "vec",
    "=",
    [
      "object_literal",
      [
        "a",
        ":",
        "hey",
        "there",
      ],
      [
        "b",
        ":",
        "2",
      ],
    ],
  ],
  [
    "closure_param_test",
    "1",
    [
      [],
      "=>",
      "a",
    ],
    "3",
    [
      [],
      "=>",
      [
        "block",
        [
          "hey",
          "there",
        ],
      ],
    ],
    "4",
    [
      [],
      "=>",
      "5",
    ],
    [
      [],
      "=>",
      [
        "block",
        "6",
      ],
    ],
    [
      [],
      "=>",
      [
        "block",
        "7",
      ],
    ],
    "8",
  ],
  [
    "let",
    [
      "tuple",
      "x",
      "y",
    ],
    "=",
    [
      "tuple",
      "1",
      "2",
    ],
  ],
  [
    [
      "Array",
      [
        "generics",
        "Hey",
        "There",
      ],
      "1",
      "2",
      "3",
    ],
    "+",
    "3",
  ],
  [
    "obj",
    [
      "Test",
      [
        "generics",
        "T",
      ],
    ],
    [
      "object_literal",
      [
        "c",
        ":",
        "i32",
      ],
    ],
  ],
  [
    [
      "match",
      "x",
    ],
    [
      [
        "Some",
        [
          "generics",
          "i32",
        ],
      ],
      ":",
      [
        "Some",
        [
          "generics",
          "i32",
        ],
      ],
      [
        "object_literal",
        [
          "value",
          ":",
          "x",
          ".",
          "value",
          "+",
          "1",
        ],
      ],
    ],
    [
      "None",
      ":",
      "None",
      [
        "object_literal",
      ],
    ],
  ],
  [
    "arr",
    ".",
    [
      "pop",
    ],
    ".",
    [
      [
        "match",
        "val",
      ],
      [
        [
          "Some",
          [
            "generics",
            [
              "Optional",
              [
                "generics",
                "i32",
              ],
            ],
          ],
        ],
        ":",
        [
          "block",
          [
            "val",
            ".",
            "value",
          ],
        ],
      ],
      [
        "None",
        ":",
        [
          "block",
          [
            "None",
            [
              "object_literal",
            ],
          ],
        ],
      ],
    ],
    ".",
    [
      [
        "match",
        "v",
      ],
      [
        [
          "Some",
          [
            "generics",
            "i32",
          ],
        ],
        ":",
        [
          "block",
          [
            "v",
            ".",
            "value",
          ],
        ],
      ],
      [
        "None",
        ":",
        [
          "block",
          "-1",
        ],
      ],
    ],
  ],
  [
    "arr",
    ".",
    [
      "pop",
    ],
    ".",
    [
      [
        "match",
        "val",
      ],
      [
        [
          "Some",
          [
            "generics",
            [
              "Optional",
              [
                "generics",
                "i32",
              ],
            ],
          ],
        ],
        ":",
        [
          "block",
          [
            "val",
            ".",
            "value",
          ],
        ],
      ],
      [
        "None",
        ":",
        [
          "block",
          [
            "None",
            [
              "object_literal",
            ],
          ],
        ],
      ],
    ],
    ".",
    [
      [
        "match",
        "v",
      ],
      [
        [
          "Some",
          [
            "generics",
            "i32",
          ],
        ],
        ":",
        [
          "block",
          [
            "v",
            ".",
            "value",
          ],
        ],
      ],
      [
        "None",
        ":",
        [
          "block",
          "-1",
        ],
      ],
    ],
  ],
  [
    "fn",
    [
      "test",
      [
        "generics",
        "T",
      ],
      [
        "a",
        ":",
        "1",
      ],
    ],
    "->",
    "i32",
  ],
  [
    "fn",
    [
      "main",
    ],
    [
      "block",
      [
        "let",
        "a",
        "=",
        [
          "...",
          "test",
          ".",
          "hey",
          "+",
          "&",
          "other",
          ".",
          "now",
        ],
      ],
      [
        "let",
        "x",
        "=",
        [
          "10",
          "+",
          [
            "block",
            [
              "20",
              "+",
              "30",
            ],
          ],
        ],
      ],
      [
        "let",
        "y",
        "=",
        [
          "if",
          "x",
          ">",
          "10",
          [
            "then",
            ":",
            [
              "block",
              "10",
            ],
          ],
          [
            "else",
            ":",
            [
              "block",
              "20",
            ],
          ],
        ],
      ],
      [
        "let",
        "n",
        "=",
        [
          "block",
          [
            "if",
            "args",
            ".",
            [
              "len",
            ],
            ">",
            "1",
            "then",
            ":",
            [
              "block",
              [
                "console",
                ".",
                [
                  "log",
                  [
                    "new_string",
                    [
                      "object_literal",
                      [
                        ":",
                        "from",
                        [
                          [
                            "FixedArray",
                            [
                              "generics",
                              "i32",
                            ],
                          ],
                          "72",
                          "101",
                          "121",
                          "32",
                          "116",
                          "104",
                          "101",
                          "114",
                          "101",
                          "33",
                        ],
                      ],
                    ],
                  ],
                ],
              ],
              [
                "args",
                ".",
                [
                  "at",
                  "1",
                ],
                ".",
                [
                  "parseInt",
                ],
                ".",
                [
                  "unwrap",
                ],
              ],
            ],
            [
              "else",
              ":",
              [
                "block",
                "10",
              ],
            ],
          ],
        ],
      ],
      [
        "let",
        "x2",
        "=",
        "10",
      ],
      [
        "let",
        "z",
        "=",
        [
          "nothing",
        ],
      ],
      [
        "let",
        "a",
        "=",
        [
          "hello",
          ".",
          [
            "boop",
            "1",
          ],
        ],
      ],
      [
        "let",
        "test_spacing",
        "=",
        [
          "fib",
          "n",
        ],
      ],
      [
        "let",
        "result",
        "=",
        [
          "fib",
          "n",
        ],
      ],
      [
        "let",
        "x",
        "=",
        [
          "&",
          "hey",
        ],
      ],
      [
        "$",
        "hey",
      ],
      [
        "$@",
        "hey",
      ],
      [
        "$",
        "hey",
      ],
      [
        "$",
        [
          "extract",
          "equals_expr",
          "2",
        ],
      ],
      [
        "block",
        "$",
        "body",
      ],
      [
        "x",
        "+",
        "5",
      ],
      [
        "x",
        "+",
        "y",
        "+",
        "10",
      ],
      [
        "x",
        "*",
        "y",
        "+",
        "10",
      ],
      [
        "x",
      ],
      "x",
      [
        "let",
        "vec",
        "=",
        [
          "object_literal",
          [
            "x",
            ":",
            "10",
          ],
          [
            "y",
            ":",
            "Point",
            [
              "object_literal",
              [
                "x",
                ":",
                "10",
              ],
              [
                "y",
                ":",
                "20",
              ],
            ],
          ],
          [
            "z",
            ":",
            [
              "object_literal",
              [
                "a",
                ":",
                "10",
              ],
              [
                "b",
                ":",
                "20",
              ],
            ],
          ],
        ],
      ],
      [
        "hi",
        [
          "there",
          "what",
        ],
        ":",
        "is",
        "up",
        [
          [
            "what",
          ],
          ":",
          "is",
          "up",
        ],
      ],
      [
        "pub",
        "fn",
        [
          "main",
        ],
        [
          "block",
          [
            "create_element",
            [
              "new_string",
              [
                "object_literal",
                [
                  ":",
                  "from",
                  [
                    [
                      "FixedArray",
                      [
                        "generics",
                        "i32",
                      ],
                    ],
                    "100",
                    "105",
                    "118",
                  ],
                ],
              ],
            ],
            [
              [
                "array_literal",
                [
                  "new_string",
                  [
                    "object_literal",
                    [
                      ":",
                      "from",
                      [
                        [
                          "FixedArray",
                          [
                            "generics",
                            "i32",
                          ],
                        ],
                        "104",
                        "105",
                      ],
                    ],
                  ],
                ],
                [
                  "new_string",
                  [
                    "object_literal",
                    [
                      ":",
                      "from",
                      [
                        [
                          "FixedArray",
                          [
                            "generics",
                            "i32",
                          ],
                        ],
                        "116",
                        "114",
                        "117",
                        "101",
                      ],
                    ],
                  ],
                ],
              ],
              [
                "tuple",
                [
                  "new_string",
                  [
                    "object_literal",
                    [
                      ":",
                      "from",
                      [
                        [
                          "FixedArray",
                          [
                            "generics",
                            "i32",
                          ],
                        ],
                        "105",
                      ],
                    ],
                  ],
                ],
                [
                  "new_string",
                  [
                    "object_literal",
                    [
                      ":",
                      "from",
                      [
                        [
                          "FixedArray",
                          [
                            "generics",
                            "i32",
                          ],
                        ],
                        "97",
                        "109",
                      ],
                    ],
                  ],
                ],
              ],
            ],
            [
              "array_literal",
              [
                "create_element",
                [
                  "new_string",
                  [
                    "object_literal",
                    [
                      ":",
                      "from",
                      [
                        [
                          "FixedArray",
                          [
                            "generics",
                            "i32",
                          ],
                        ],
                        "112",
                      ],
                    ],
                  ],
                ],
                [
                  "array_literal",
                  [
                    "new_string",
                    [
                      "object_literal",
                      [
                        ":",
                        "from",
                        [
                          [
                            "FixedArray",
                            [
                              "generics",
                              "i32",
                            ],
                          ],
                          "114",
                          "101",
                          "97",
                          "100",
                          "121",
                        ],
                      ],
                    ],
                  ],
                  [
                    "new_string",
                    [
                      "object_literal",
                      [
                        ":",
                        "from",
                        [
                          [
                            "FixedArray",
                            [
                              "generics",
                              "i32",
                            ],
                          ],
                          "116",
                          "114",
                          "117",
                          "101",
                        ],
                      ],
                    ],
                  ],
                ],
                [
                  "array_literal",
                  [
                    "new_string",
                    [
                      "object_literal",
                      [
                        ":",
                        "from",
                        [
                          [
                            "FixedArray",
                            [
                              "generics",
                              "i32",
                            ],
                          ],
                          "72",
                          "101",
                          "108",
                          "108",
                          "111",
                          "32",
                          "116",
                          "104",
                          "101",
                          "114",
                          "101",
                          "33",
                          "33",
                          "32",
                        ],
                      ],
                    ],
                  ],
                ],
              ],
              [
                "create_element",
                [
                  "new_string",
                  [
                    "object_literal",
                    [
                      ":",
                      "from",
                      [
                        [
                          "FixedArray",
                          [
                            "generics",
                            "i32",
                          ],
                        ],
                        "112",
                      ],
                    ],
                  ],
                ],
                [
                  "array_literal",
                ],
                [
                  "array_literal",
                  [
                    "new_string",
                    [
                      "object_literal",
                      [
                        ":",
                        "from",
                        [
                          [
                            "FixedArray",
                            [
                              "generics",
                              "i32",
                            ],
                          ],
                          "72",
                          "111",
                          "119",
                          "32",
                          "97",
                          "114",
                          "101",
                          "32",
                          "121",
                          "111",
                          "117",
                          "32",
                          "116",
                          "111",
                          "100",
                          "97",
                          "121",
                          "32",
                        ],
                      ],
                    ],
                  ],
                ],
              ],
            ],
          ],
        ],
      ],
    ],
  ],
  [
    "pub",
    "fn",
    [
      "pipe",
    ],
    "->",
    "i32",
    [
      "block",
      [
        "2",
        ".",
        [
          [
            "x",
            ":",
            "i32",
          ],
          "=>",
          [
            "x",
            "+",
            "3",
          ],
        ],
        ".",
        [
          [
            "x",
            ":",
            "i32",
          ],
          "=>",
          [
            "x",
            "*",
            "5",
          ],
        ],
      ],
    ],
  ],
]
`;

exports[`it correctly inserts blocks in a basic fib fn 1`] = `
[
  "ast",
  [
    "fn",
    [
      "fib",
      [
        "n",
        ":",
        "i32",
      ],
    ],
    "->",
    "i32",
    [
      "block",
      [
        "if",
        "n",
        "<=",
        "1",
        "then",
        ":",
        [
          "block",
          "n",
        ],
        [
          "else",
          ":",
          [
            "block",
            [
              [
                "fib",
                [
                  "n",
                  "-",
                  "1",
                ],
              ],
              "+",
              [
                "fib",
                [
                  "n",
                  "-",
                  "2",
                ],
              ],
            ],
          ],
        ],
      ],
    ],
  ],
]
`;

exports[`it correctly passes inline closure parameters 1`] = `
[
  "ast",
  [
    "closure_param_test",
    "1",
    [
      [],
      "=>",
      "a",
    ],
    "3",
    [
      [],
      "=>",
      [
        "block",
        [
          "hey",
          "there",
        ],
      ],
    ],
    "4",
    [
      "hola",
      "1",
      "2",
    ],
    [
      "hi",
    ],
    [
      "there",
    ],
    "4",
    [
      "how",
    ],
    [],
    [
      "are",
    ],
    [
      [],
      "=>",
      "5",
    ],
    [
      [],
      "=>",
      [
        "hi",
      ],
    ],
    [
      [],
      "=>",
      [
        "hi",
      ],
    ],
    [
      [],
      "=>",
      [
        "block",
        "6",
      ],
    ],
    [
      [],
      "=>",
      [
        "block",
        "7",
      ],
    ],
    "8",
  ],
]
`;

exports[`it normalizes function calls 1`] = `
[
  "ast",
  [
    "fib",
    [
      "n",
      "-",
      "1",
    ],
    "hi",
  ],
  [
    "fib",
    [
      "tuple",
      [
        "n",
        "-",
        "1",
      ],
      "hi",
    ],
  ],
  [
    "fib",
    [
      "generics",
      "i32",
    ],
    [
      "n",
      "-",
      "1",
    ],
    "hi",
  ],
  [
    "fib",
    [
      "generics",
      "i32",
    ],
    [
      "tuple",
      [
        "n",
        "-",
        "1",
      ],
      "hi",
    ],
  ],
  [
    "n",
    "-",
    "1",
  ],
  [
    "tuple",
    [
      "n",
      "-",
      "1",
    ],
    "hi",
  ],
  [
    "fib",
    [
      "n",
      "-",
      "1",
    ],
  ],
  [
    "fib",
    [
      "tuple",
      [
        "n",
        "-",
        "1",
      ],
      "4",
    ],
  ],
]
`;
